@@ -41,6 +41,8 @@ SVN trunk (1.1.2+svn):
  * Wesnoth engine
    * new unit display graphic engine...
    * added unit cost to help
+ * WML improvements
+   * interpret the variables/arrays in a few more tags
  * misc
    * fix alt key under MacosX
 
